--- a/recipes/templates/recipes/pages/home.html
+++ b/recipes/templates/recipes/pages/home.html
@@ -3,15 +3,13 @@
 
 <body>
     {% include 'recipes\partials\header.html' %}
+    {% include 'recipes\partials\search.html' %}
 
-    <div class="search-container">
-        <div class="container">
-            <form class="search-form">
-                <input type="search", class="search-input" name="search">
-                <button type="submit" class="search-button"><i class="fas fa-search"></i></button>
-            </form>
+    <main class="main-content-container">
+        <div class="main-content-list container">
+            {% include 'recipes\partials\recipe.html'%}
         </div>
-    </div>
-
+    </main>
+    {% include 'recipes\partials\footer.html'%}
 </body>
 </html>
