--- a/recipes/templates/recipes/pages/home.html
+++ b/recipes/templates/recipes/pages/home.html
@@ -6,7 +6,12 @@
     {% include 'recipes\partials\search.html' %}
 
     <main class="main-content-container">
-        <div class="main-content-list container">
+        <div class="main-content main-content-list container">
+            {% include 'recipes\partials\recipe.html'%}
+            {% include 'recipes\partials\recipe.html'%}
+            {% include 'recipes\partials\recipe.html'%}
+            {% include 'recipes\partials\recipe.html'%}
+            {% include 'recipes\partials\recipe.html'%}
             {% include 'recipes\partials\recipe.html'%}
         </div>
     </main>
