--- a/recipes/templates/recipes/partials/recipe.html
+++ b/recipes/templates/recipes/partials/recipe.html
@@ -1,10 +1,16 @@
 <div class="recipe recipe-list-item">
     <div class="recipe-cover">
-        <img src={{recipe.cover.url}} alt="Temporário">
+        <a href="{% url 'recipes:recipe' recipe.id%}">
+            <img src={{recipe.cover.url}} alt="Temporário">
+        </a>
     </div>
 
     <div class="recipe-title-container">
-        <h2 class="recipe-title">{{recipe.title}}</h2>
+        <h2 class="recipe-title">
+            <a href="{% url 'recipes:recipe' recipe.id%}">
+                {{recipe.title}}
+            </a>
+        </h2>
     </div>
     <div class="recipe-author">
         <span class="recipe-author-item">
@@ -24,7 +30,7 @@
     </div>
 
     <div class="recipe-content">
-        <p>{{ recipe.description}}</p>
+        <p>{{recipe.description}}</p>
     </div>
 
     <div class="recipe-meta-container">
@@ -41,12 +47,18 @@
             </div>
         </div>
     </div>
-
+    {% if is_detail_page is not True %}
     <footer class="recipe-footer">
-        <a class="recipe-read-more button button-dark button-full-width" href="/recipes/3/">
+        <a class="recipe-read-more button button-dark button-full-width" href="{% url 'recipes:recipe' recipe.id%}">
             <i class="fas fa-eye"></i>
             <span>ver mais...</span>
         </a>
     </footer>
+    {% endif %}
 
+    {% if is_detail_page is True %}
+    <div class= "preparation-steps">
+        {{recipe.preparation_steps |linebreaksbr}}
+    </div>
+    {%endif%}
 </div>
